# SymplexMethod

./: .gitignore  .pylintrc  README.md  SymplexSolver.py  input.txt  main.py  pyproject.toml  requirements.txt  sample.json  sample1.json  sample2.json  sample3.json
.github/workflows/: pylint.yml
index_html/: index.css  index.html  index.js
symplexmethod/: __init__.py  __main__.py  main.py  symplex_solver.py  utility.py  vector_utilities.py
symplexmethod/input/: abstract_input.py  json_input.py
symplexmethod/models/: symplex_table.py
